src/objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>Community_Location__c</fullName>
        <description>Field visible only if Where did the incident Occur = Community Location</description>
        <label>Specify Community Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Occurred__c</fullName>
        <description>Date/time the incident occurred</description>
        <label>Date/Time Incident Occurred</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Reported__c</fullName>
        <description>Date/time incident was reported to TMN</description>
        <label>Date/Time Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_Action_Taken_Other__c</fullName>
        <label>First Response Action Taken Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Response_Action_Taken__c</fullName>
        <label>First Response Action Taken</label>
        <picklist>
            <picklistValues>
                <fullName>Administered First Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessed for Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called 911</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulted Outside Med/Psych Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulted Network Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER/Urgent Care Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performed CPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performed Choking Relief Maneuver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care Physician Contact or Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Hospitalization_Type__c</fullName>
        <label>Type of Hospitalization</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatric</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospitalized__c</fullName>
        <label>Hospitalized</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incident_Level__c</fullName>
        <label>Incident Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incident_Outcome__c</fullName>
        <label>Incident Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Outcome value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outcome value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outcome value 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incident_Type_Detail__c</fullName>
        <label>Incident Type Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Detail value 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail value 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail value 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <description>Type of incident.</description>
        <label>Incident Type</label>
        <picklist>
            <picklistValues>
                <fullName>Death of Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elopement of Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suicidal Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sexual Assault by Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Assault by Person Being Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioral Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Injury of Person Being Served</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Internal_Investigation__c</fullName>
        <label>Was an Internal Investigation initiated?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location/program that is the subject of this incident.</description>
        <label>Location</label>
        <referenceTo>Alias__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the incident is locked for editing.  Used in conjunction with revision status.  Not a visible element.</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mentor_present__c</fullName>
        <label>Mentor Present at Time of Incident</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information not yet available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Type__c</fullName>
        <description>Field visible only if Where did the incident Occur = Day Program OR Place of Employment OR Program Office OR Residence OR School OR Vehicle</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Network</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <description>operating group for this incident - depends on recordtype</description>
        <label>Operating Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initial incident that this one revises</description>
        <label>Original Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Revisions</relationshipLabel>
        <relationshipName>Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Location__c</fullName>
        <description>Field visible only if Where did the incident Occur = Other Location</description>
        <label>Specify Other Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_people__c</fullName>
        <description>List of other people present.  Required if Others present at the time of incident = Yes.</description>
        <label>Other people information</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Others_Present_at_Time_of_Incident__c</fullName>
        <label>Others Present at Time of Incident?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information not yet known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PBS_Arrest_Reason_Known__c</fullName>
        <label>PBS Arrest Reason Known</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PBS_Arrested__c</fullName>
        <label>Was the PBS Arrested/Detained</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Revision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Revision</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Prior Revisions</relationshipLabel>
        <relationshipName>Prior_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which service is related to the incident?</inlineHelpText>
        <label>Service Related to Incident</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Present__c</fullName>
        <label>Staff Present at Time of Incident?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information ot yet available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>state for this incident - depends on recordtype</description>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervised__c</fullName>
        <label>PBS under direct Network supervision</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TMN_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Filled in if mentor is subject of incident (not Mentor present at time of incident)</description>
        <label>Mentor Related to Incident</label>
        <referenceTo>TMN_Contact__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents_Mentor_as_Subject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMN_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used if Staff Member is subject of incident (not staff present at time of incident).</description>
        <label>Staff Related to Incident</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unknown_Date_Occurred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unknown Date Occurred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Where_incident_occurred__c</fullName>
        <label>Where did the incident occur?</label>
        <picklist>
            <picklistValues>
                <fullName>Biological Family/Guardian Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place of Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Incident Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <recordTypes>
        <fullName>Employee</fullName>
        <active>true</active>
        <description>This recordtype is used to tag Employee type incidents linked to TMN User Object</description>
        <label>Employee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <description>This recordtype is used to tag Location type incidents linked to Service Location object</description>
        <label>Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mentor</fullName>
        <active>true</active>
        <description>This recordtype is used to tag Mentor type incidents linked to TMN Contact Object</description>
        <label>Mentor</label>
    </recordTypes>
    <recordTypes>
        <fullName>PBS</fullName>
        <active>true</active>
        <description>This recordtype is used to tag Incidents created at Service Assignment Level</description>
        <label>PBS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>